@@ -2,6 +2,8 @@ Changes to Version 3.1-0
 
   o New 3D added-variable and component+residual plots, avPlot3d() and crPlot3d().
 
+  o More flexible recode()/Recode().
+  
 Changes to Version 3.0-13
 
   o Handle singularities better in Anova.mlm() (suggestion of Marius Barth).
